# foclassic

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  BinaryFiles.md  Build.cmake  CMake.h.in  CMakeLists.txt  LICENSE.md  README.md
.githooks/: prepare-commit-msg.diff-comment
.github/workflows/: Build.yml
ASCompiler/: ASCompiler.sln  ASCompiler.vcxproj  ASCompiler.vcxproj.filters
CMake/: AutomatedBuild.cmake  BuildFunctions.cmake  CMake.h.in  DisableInSourceBuild.cmake  Extensions.cmake  FOClassic.cmake  FOClassicVersion.cmake  FormatSource.cmake  PdbSetup.cmake  PdbStrip.cmake  RandomValues.cmake  SelfUpdate.cmake  SourceOptions.cmake
CMake/Templates/: CMake.AngelScript.h  CMake.Net.h  CMake.h  VERSION
CMake/Toolchain/: Linux32.cmake
Client/: Client.rc  Client.sln  Client.vcxproj  Client.vcxproj.filters
DataPatcher/: DataPatcher.sln
DialogEditor/: DialogEditor.cpp  DialogEditor.vcxproj  EnterBox.cpp  MessBox.cpp
Dll/: dll.cpp  foclassic.fos  foclassic.h
Dll/AngelScript/: angelscript.h  scriptany.h  scriptarray.h  (+4 more)
Docs/: AngelScript.md  CHANGELOG.md  CMakeLists.txt
Extensions/: CMakeLists.txt  FOClassic.Template.h  FOClassic.h  _defines.fos  extension.cpp  foclassic.fos  foclassic.h
Extensions.Dynamic/: CMakeLists.txt  FOClassic.h
Extensions.Dynamic/Example/: CMakeLists.txt  _defines.fos
Extensions/Example/: CMakeLists.txt  _defines.fos  extension.cpp
FOConfig/: FOConfig.cpp
Launcher/: Common.cpp  Common.h  Config.cpp  Config.h  Launcher.cbproj  TypeProxy.dfm  Updater.cpp
Legacy/: DummyData.h  SelfUpdate.cmake  preprocessor.cpp
Legacy/DatFile/: CMakeLists.txt  cfile.cpp  cfile.h  unlzss.h
Lib/: fltkgl.lib
Mapper/: Mapper.rc  Mapper.sln  Mapper.vcxproj  Mapper.vcxproj.filters
MrFixit/: MrFixit.sln
Resources/: VersionInfo.rc
Server/: Server.rc  Server.sln  Server.vcxproj  Server.vcxproj.filters
Source/: 3dAnimation.cpp  3dAnimation.h  3dContourPS.txt  3dShadowVS.txt  3dSkinning.fx  3dStuff.cpp  3dStuff.h  AI.cpp  AI.h  ASCompiler.cpp  ASCompiler.h  Access.cpp  Access.h  App.cpp  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Client.cpp  Client.h  ClientInterface.cpp  Common.cpp  Common.h  ConfigFile.cpp  ConfigFile.h  ConstantsManager.cpp  ConstantsManager.h  Core.h  CountSource.bat  CraftManager.cpp  CraftManager.h  Critter.cpp  Critter.h  CritterCl.cpp  CritterCl.h  CritterData.h  CritterManager.cpp  CritterManager.h  CritterType.cpp  CritterType.h  Crypt.cpp  (+127 more)
Source/AngelScript/: CMakeLists.txt  as_config.h  as_context.cpp  preprocessor.h  scriptany.cpp  scriptany.h  scriptarray.cpp  scriptarray.h  scriptdictionary.cpp  scriptdictionary.h  scriptfile.cpp  scriptfile.h  scriptmath.cpp  scriptstring.cpp  scriptstring.h
Source/AngelScript/Addons/: scriptany.cpp  scriptany.h  scriptarray.cpp  scriptarray.h  scriptdictionary.cpp  scriptdictionary.h  scriptfile.h  scriptmath.cpp  scriptmath.h  scriptstring.cpp  scriptstring.h
Source/Assimp/: IOSystem.h  aiConfig.h  aiDefines.h
Source/Cmd/: CMakeLists.txt  Command.h  MainCmd.cpp  ShowWorld.cpp  ShowWorld.h  WorldSave.cpp  WorldSave.h  WorldSaveDump.cpp  WorldSaveDump.h
Source/Cmd/ShowWorld/: WorldSave.cpp  WorldSaveDump.cpp  WorldSaveDump.h
Source/DatFile/: CMakeLists.txt  cfile.cpp  cfile.h  unlzss.cpp  unlzss.h
Source/Dx9/: XAudio2.h  XDSP.h  xnamathmatrix.inl
Source/GL/: glew.h
Source/Libs/: CMakeLists.txt
Source/Libs/acm/: CMakeLists.txt  acmstrm.cpp
Source/Libs/assimp/: CMakeLists.txt
Source/Libs/assimp/Assimp/: Logger.h  aiAssert.h  aiMaterial.h  aiMaterial.inl  aiMesh.h  aiPostProcess.h  aiQuaternion.h  aiScene.h  aiTypes.h  assimp.hpp  export.hpp
Source/Libs/distorm/: mnemonics.h
Source/Libs/distorm.bin/: CMakeLists.txt  distorm.h
Source/Libs/dx9/: CMakeLists.txt  dxsdkver.h  xact3.h  xnamathconvert.inl
Source/Libs/dx9.bin/: XAPOBase.h  XAudio2fx.h  xnamath.h  xnamathmisc.inl  xnamathvector.inl
Source/Libs/dx9.bin/x64/: D3DCSXd.lib  d3d11.lib  dxgi.lib  xapobased.lib
Source/Libs/dx9.bin/x86/: XInput.lib  dxguid.lib
Source/Libs/dx9/x64/: XInput.lib  d3dcompiler.lib  d3dx10d.lib  d3dx11.lib  d3dx11d.lib  d3dx9.lib  d3dx9d.lib
Source/Libs/dx9/x86/: XAPOFX.lib  dsetup.lib  xapobase.lib  xapobased.lib
Source/Libs/event2.bin/: CMakeLists.txt  README.md
Source/Libs/event2.bin/event2/: event-config.h
Source/Libs/fltk/: CMakeLists.txt
Source/Libs/fltk.bin/: CMakeLists.txt
Source/Libs/fltk.bin/FL/: Enumerations.H  Fl.H  Fl_Native_File_Chooser.H  Fl_Tabs.H
Source/Libs/fltk/FL/: Fl_Widget.H  mac.H
Source/Libs/glew/: CMakeLists.txt  glew.c
Source/Libs/il.bin/: CMakeLists.txt
Source/Libs/jpeg.bin/: CMakeLists.txt
Source/Libs/ogg/: CMakeLists.txt
Source/Libs/ogg.bin/: CMakeLists.txt
Source/Libs/png/: libpng15.lib
Source/Libs/png.bin/: CMakeLists.txt
Source/Libs/portaudio.bin/: CMakeLists.txt
Source/Libs/pthread.bin/: CMakeLists.txt
Source/Libs/sha2/: CMakeLists.txt
Source/Libs/theora.bin/: CMakeLists.txt
Source/Libs/zlib/: CMakeLists.txt
Source/Other/: 3dMeshHierarchy.h  AllocPresenter.cpp  ItemPid.h  Location.cpp  Perks.cpp  Perks.h  ProtoNpc.cpp  SQL.cpp  StaticPool.h  Vector.h  proto_critter.cpp  proto_critter.h  socials.cpp  socials.h
Source/Other/3dStuff/: ShadowVolume.h  Terrain.cpp  TerrainGrid.cpp  TerrainGrid.h
Source/Other/Acm/: ACMStream.cpp  ACMStreamAPI.cpp  ACMStreamSeek.cpp
Source/Shared/: App.h  AutoPointers.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Core.cpp  Core.h  Crypt.cpp  Crypt.h  DataFile.cpp  DataFile.h  Defines.Public.h  Defines.h  DynamicLibrary.h  Exception.cpp  Exception.h  FileManager.cpp  FileManager.h  FileSystem.cpp  FileSystem.h  GameOptions.cpp  GameOptions.h  Ini.cpp  Ini.h  Log.Shared.h  Mutex.cpp  Mutex.h  PUBLIC.Defines.h  PlatformSpecific.h  Random.cpp  Random.h  StaticAssert.h  Text.cpp  Text.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Types.h
Source/Shared/DataFile/: Dat.cpp  Dat.h  Zip.cpp  Zip.h
Source/SourceTools/: uncrustify  uncrustify.cfg  uncrustify.min.sh  uncrustify.txt
Source/event2/: event-config.h
docs/: CHANGELOG.md
(+285 files in other folders)
